// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders a button when showLoader is active 1`] = `
<button
  class="p-3 px-5 text-md bg-primary-0 focus:ring-primary-0 hover:bg-primary-1 focus:ring-2 focus:border-transparent border-2 text-white  rounded-full font-semibold transition duration-300"
  disabled=""
>
  <div
    class="relative w-full h-full flex justify-center items-center"
  >
    <div
      class="transition duration-400 opacity-0"
    >
      Text
    </div>
    <div
      class="absolute z-10 transition duration-400 opacity-100"
    >
      <div
        aria-busy="true"
        class=""
      >
        <svg
          aria-label="audio-loading"
          height="30"
          viewBox="0 0 38 38"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="a"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="#fff"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="#fff"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="#fff"
              />
            </lineargradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="#fff"
                stroke-width="2"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="#fff"
                r="1"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</button>
`;

exports[`Button Renders the Button as link  1`] = `
<a
  class="p-3 px-5 text-md bg-primary-0 focus:ring-primary-0 hover:bg-primary-1 focus:ring-2 focus:border-transparent border-2 text-white  rounded-full text-white font-semibold cursor-pointer transition duration-300"
  href="/"
>
  <div
    class="relative w-full h-full flex justify-center items-center"
  >
    <div
      class="transition duration-400 opacity-100"
    >
      Text
    </div>
    <div
      class="absolute z-10 transition duration-400 opacity-0"
    >
      <div
        aria-busy="true"
        class=""
      >
        <svg
          aria-label="audio-loading"
          height="30"
          viewBox="0 0 38 38"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="a"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="#fff"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="#fff"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="#fff"
              />
            </lineargradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="#fff"
                stroke-width="2"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="#fff"
                r="1"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="absolute z-10 transition duration-400 opacity-0"
    />
  </div>
</a>
`;

exports[`Button should render a Button 1`] = `
<button
  class="p-3 px-5 text-md bg-primary-0 focus:ring-primary-0 hover:bg-primary-1 focus:ring-2 focus:border-transparent border-2 text-white  rounded-full font-semibold transition duration-300"
>
  <div
    class="relative w-full h-full flex justify-center items-center"
  >
    <div
      class="transition duration-400 opacity-100"
    >
      Text
    </div>
    <div
      class="absolute z-10 transition duration-400 opacity-0"
    >
      <div
        aria-busy="true"
        class=""
      >
        <svg
          aria-label="audio-loading"
          height="30"
          viewBox="0 0 38 38"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="a"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stop-color="#fff"
                stop-opacity="0"
              />
              <stop
                offset="63.146%"
                stop-color="#fff"
                stop-opacity=".631"
              />
              <stop
                offset="100%"
                stop-color="#fff"
              />
            </lineargradient>
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="#fff"
                stroke-width="2"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="#fff"
                r="1"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="absolute z-10 transition duration-400 opacity-0"
    />
  </div>
</button>
`;
